# dev_in_test_app_team

./: README.md  pyproject.toml  pytest.ini  requirements.txt
framework/: login_page.py  page.py
tests/: conftest.py  funcs.py
tests/login/: test_login.py
utils/: android_utils.py
